sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:10: error: type mismatch;
 found   : java.awt.Color
 required: Int
   else if (c=Color.white) {var j=i ; while (j>=0 && getCouleur(j)!=Color.blue && getCouleur(j)!=Color.white )
                    ^DutchFlagAlgo:10: error: type mismatch;
 found   : Unit
 required: Boolean
   else if (c=Color.white) {var j=i ; while (j>=0 && getCouleur(j)!=Color.blue && getCouleur(j)!=Color.white )
             ^