sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  val n= getTaille()
  for (i<-1 to n-1)
  {var c=getCouleur(i)
  if (c== Color.blue)
  {var j=i ;
    while (j>=0 && getCouleur(j)!=Color.blue)
      {echange(j,j-1); j-=1}}
   else if (c=Color.white) {var j=i ; while (j>=0 && getCouleur(j)!=Color.blue && getCouleur(j)!=Color.white )
      {echange(j,j-1); j-=1}}}
}
